--- a/fase2/design.html
+++ b/fase2/design.html
@@ -14,20 +14,29 @@
     <nav>
         <ul>
             <li>Inicio</li>
-            <li>Tema
+            <li>Temas
                 <ul>
-                    <li>opcion 1</li>
-                    <li>opcion 2</li>
+                    <li>Tema 1</li>
+                    <li>Tema 2</li>
                 </ul>
             </li>
-            <li>Recurso
+            <li>Recursos Digitales
                 <ul>
-                    <li>opcion 1</li>
-                    <li>opcion 2</li>
+                    <li>Recurso 1</li>
+                    <li>Recurso 2</li>
                 </ul>
             </li>
-            <li>Aprendizaje</li>
-            <li>Acerca de</li>
+            <li>Aprendizaje
+                <ul>
+                    <li>Actividad 1</li>
+                    <li>Actividad 2</li>
+                </ul>
+            </li>
+            <li>Acerca de
+                <ul>
+                    <li>Autor</li>
+                </ul>
+            </li>
         </ul>
     </nav>
     <hr>
