--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -17,6 +17,11 @@
            skype: live:jhonatanquinte <br>
            correo: jhonatanquinte@hotmail.com </p>
    </h4>
+
+   <h2> Fases del proyecto</h2>
+   <a href="fase2/design.html"> fase 2</a>
+
+
    
 </body>
 </html>
