--- a/fase2/design.html
+++ b/fase2/design.html
@@ -51,7 +51,7 @@
                 <h4> Etiquetas semánticas </h4>
                 <img src="imagen/Etiquetas semánticas.png" alt="descripcion alternativa">
                 <p>
-                    podemos decir que una etiqueta semántica es una unidad léxica (lexema o frasema) o un sintagma de una lengua L que puede utilizarse como género próximo en la definición analítica de un conjunto relativamente numeroso de unidades léxicas de L. 
+                    podemos decir que una etiqueta semántica es una unidad léxica (lexema o frasema) o un sintagma de una lengua L que puede utilizarse como género próximo en la definición analítica de un conjunto relativamente numeroso de unidades léxicas de L, y ayudan a definir la estructura del documento y permiten que las páginas web sean mejor indexadas por los buscadores. 
                     <p>Blanco Escoda, X. (2010). Etiquetas semánticas de hecho como género próximo en la definición lexicográfica.</p>
                 </p>
             </article>
@@ -60,7 +60,7 @@
                 <h4> CSS Grid </h4>
                 <img src="imagen/CSS Grid.png" alt="descripcion">
                 <p>
-                    CSS Grid Es fácil de usar y sensible por diseño. Y de
+                    CSS Grid es un sistema de maquetación web que divide la página en una cuadrícula o rejilla a partir de la cual se pueden posicionar los diferentes elementos de manera más sencilla, versátil y coherente. Ademas Es fácil de usar y sensible por diseño. Y de
                     Por supuesto, uno puede mostrar los elementos de la página en cualquier orden, sin depender de ninguna manera del orden descrito en
                     código fuente.
                     <p>Niess, G., Roubal, A., Thurner, S., & Roque, E. B. (2019). CSS Grid Layouts.</p>
@@ -78,7 +78,7 @@
     </footer>
     <hr>
     <h2> Mi mockup </h2>
-    <img src="imagen/Mi Mockups.PNG" alt="mi mockup">
+    <img src="imagen/mi mockup.png" alt="mi mockup">
 
 </body>
 </html>
