--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
    </h4>
 
    <h2> Fases del proyecto</h2>
-   <a href="fase2/design.html"> fase 2</a>
+   <a href="fase2/design.html"> Fase 2</a>
 
 
    
