--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
    </h4>
 
    <h2> Fases del proyecto</h2>
-   <a href="fase2/design.html"> Fase 2</a>
+   <a href="fase2/design.html"> FASE 2</a><br>
+   <a href="fase3/index.html"> FASE 3</a>
 
 
    
