--- a/index.html
+++ b/index.html
@@ -1,28 +1,32 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    
+
     <h1> Proyecto de sitio Web 2021 -16-04 </h1>
-   <h3> Nombre: Jhonatan David Quintero Bernal </h3>
-   <h3> Programa: ingenieria de sistemas </h3>
-   <h4>
-       <p> fecha de creacion: Agosto 28 del 2021 </p>
-       <p> celular: 3158285196 <br>
-           skype: live:jhonatanquinte <br>
-           correo: jhonatanquinte@hotmail.com </p>
-   </h4>
+    <h3> Nombre: Jhonatan David Quintero Bernal </h3>
+    <h3> Programa: ingenieria de sistemas </h3>
+    <h4>
+        <p> fecha de creacion: Agosto 28 del 2021 </p>
+        <p> celular: 3158285196 <br>
+            skype: live:jhonatanquinte <br>
+            correo: jhonatanquinte@hotmail.com </p>
+    </h4>
 
-   <h2> Fases del proyecto</h2>
-   <a href="fase2/design.html"> FASE 2</a><br>
-   <a href="fase3/index.html"> FASE 3</a>
+    <h2> Fases del proyecto</h2>
+    <a href="fase2/design.html"> FASE 2</a><br>
+    <a href="fase3/index.html"> FASE 3</a><br>
+    <a href="fase4/index.html"> FASE 4</a>
 
 
-   
+
 </body>
+
 </html>
