--- a/fase2/design.html
+++ b/fase2/design.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1> Aprendiendo Etiquetas semánticas, CSS Grid </h1>
+        <h1> Aprendiendo Etiquetas semánticas - CSS Grid </h1>
     </header>
     <hr>
     <nav>
