--- a/fase4/Autor.html
+++ b/fase4/Autor.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1> Etiquetas semánticas, CSS Grid </h1>
+        <h1> Etiquetas semánticas - CSS Grid </h1>
     </header>
     <nav>
         <ul>
@@ -27,7 +27,7 @@
             <li><a href="">Aprendizaje</a>
             <ul class="submenu">
                 <li><a href="evaluacion1.html">Evaluacion de Etiquetas semánticas</a></li>
-                <li><a href="evaluacion1.html">Evaluacion de CSS Grid</a></li>
+                <li><a href="evaluacion2.html">Evaluacion de CSS Grid</a></li>
             </ul>
             <li><a href="Autor.html">Autor</a></li>
         </ul>
@@ -51,6 +51,6 @@
             <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FUniversidadUNAD%2F&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="340" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
         </aside>
     </main>
-    <footer> Fecha: Noviembre 2021 </footer>
+    <footer> Fecha: Diciembre 2021 </footer>
 </body>
 </html>
