--- a/fase4/evaluacion1.html
+++ b/fase4/evaluacion1.html
@@ -17,12 +17,12 @@
 <body>
     <header class="container-fluid bg-dark">
         <div class="row">
-            <div class="col-4"> <img src="logo1.png" alt="asd asd"></div>
-            <div class="col-8 text-light">
+            <div class="col-md-4"> <img src="logo1.png" alt="asd asd"></div>
+            <div class="col-md-8 text-light">
 
+                <p class="text-center">
                 <H1>Etiquetas semánticas</H1>
-
-
+                </p>
             </div>
 
 
@@ -50,7 +50,8 @@
                             Evaluacion
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="evaluacion1.html">Evaluacion de Etiquetas semánticas</a></li>
+                            <li><a class="dropdown-item" href="evaluacion1.html">Evaluacion de Etiquetas semánticas</a>
+                            </li>
                             <li><a class="dropdown-item" href="evaluacion2.html">Evaluacion de CSS Grid</a></li>
 
                         </ul>
