--- a/fase4/Recurso2.html
+++ b/fase4/Recurso2.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1> Etiquetas semánticas, CSS Grid </h1>
+        <h1> Etiquetas semánticas - CSS Grid </h1>
     </header>
     <nav>
         <ul>
