--- a/fase4/evaluacion2.html
+++ b/fase4/evaluacion2.html
@@ -17,9 +17,11 @@
 <body>
     <header class="container-fluid bg-dark">
         <div class="row">
-            <div class="col-4"> <img src="logo1.png" alt="asd asd"></div>
-            <div class="col-8 text-light">
+            <div class="col-md-4"> <img src="logo1.png" alt="asd asd"></div>
+            <div class="col-md-8 text-light">
+                <p class="text-center">
                 <H1>CSS Grid</H1>
+                </p>
             </div>
 
 
@@ -47,7 +49,8 @@
                             Evaluacion
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="evaluacion1.html">Evaluacion de Etiquetas semánticas</a></li>
+                            <li><a class="dropdown-item" href="evaluacion1.html">Evaluacion de Etiquetas semánticas</a>
+                            </li>
                             <li><a class="dropdown-item" href="evaluacion2.html">Evaluacion de CSS Grid</a></li>
 
                         </ul>
@@ -63,7 +66,12 @@
     <main class="container">
         <div class="row">
             <div class="col-md-8">
-                <iframe width='100%'  height='600px'  scrolling='yes'  src='https:&#x2F;&#x2F;www.goconqr.com&#x2F;en&#x2F;p&#x2F;34812118-CSS-GRID-quizzes?frame=true'  style='border: 1px solid #ccc'  allowfullscreen  webkitallowfullscreen  mozallowfullscreen  oallowfullscreen  msallowfullscreen></iframe><a href='https:&#x2F;&#x2F;www.goconqr.com&#x2F;en&#x2F;quiz-maker'>Quiz created by Jhonatan Quintero with GoConqr</a>
+                <iframe width='100%' height='600px' scrolling='yes'
+                    src='https:&#x2F;&#x2F;www.goconqr.com&#x2F;en&#x2F;p&#x2F;34812118-CSS-GRID-quizzes?frame=true'
+                    style='border: 1px solid #ccc' allowfullscreen webkitallowfullscreen mozallowfullscreen
+                    oallowfullscreen msallowfullscreen></iframe><a
+                    href='https:&#x2F;&#x2F;www.goconqr.com&#x2F;en&#x2F;quiz-maker'>Quiz created by Jhonatan Quintero
+                    with GoConqr</a>
 
             </div>
             <aside class="col-md-4">
