--- a/fase4/index.html
+++ b/fase4/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <h1> Etiquetas semánticas, CSS Grid</h1>
+        <h1> Etiquetas semánticas - CSS Grid</h1>
     </header>
     <nav>
         <ul>
